--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to get in touch. Email: your@email.com</p>
+        <p>Feel free to get in touch. Email: 202180273@psu.palawan.edu.ph </p>
     </section>
 
     <footer>
